# fujiversal

./: .gitignore  CMakeLists.txt  Makefile  board_defs.h  bus.pio  fujiROMType.h  hdbdw3bc3.rom  main.c  main.cpp  readme.md  setup_sm.cpp  setup_sm.h
boards/: coco_proto_260402.pio  msx_proto_260402.pio  msxrp2350.h  msxrp2350.pio  msxwaveshare2350b.h  msxwaveshare2350b.pio  picorom.h  picorom.pio  picorom_coco.pio  picorom_msx.pio
msx/: Makefile  header.s  io.s  jptable.s
msx/disk/: disk.c  io.s
msx/io/: Makefile  iotest.py
msx/io/src/: portio.h
msx/unapi/: Makefile  example.s  pragma.inc
msx/unapi/src/: const.inc  const.s  dispatch.c  do_extbio.s  fuji_call.c  fuji_call.h  fuji_call.inc  func.s  getslt.s  getwrk.s  init.s  initmsg.s  main.c  port_discard_until.s  port_get_until.s  port_getbuf.s  port_getbuf_slip_dual.s  port_getc.s  port_getc_timeout.s  port_putbuf.s  port_putbuf_slip.s  port_putc.s  portio.h  portio.inc  toupper.s  unapi_entry.s
msx/unapi/src/header/: msx_rom_header.asm
msxdisk/: header.s  io.h
msxio/: Makefile  iotest.py
msxio/makefiles/: fnlib.py
msxio/r2r/msxrom/: disk.rom
msxio/src/: main.c  portio.c  portio.s
